--- a/app/assets/stylesheets/inner.less
+++ b/app/assets/stylesheets/inner.less
@@ -13,6 +13,8 @@
   margin: 0 auto;
 }
 
+#main-menu ul.nav { width: 100%; }
+
 #site-header {
   margin-bottom: 20px;
   padding: 60px 0 10px;
